# polymarket-gamma-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs
src/endpoints/: comments.rs  events.rs  markets.rs  mod.rs  profiles.rs  search.rs  series.rs  sports.rs  tags.rs
src/types/: mod.rs  types_comments.rs  types_event.rs  types_events.rs  types_markets.rs  types_profiles.rs  types_search.rs  types_series.rs  types_sports.rs  types_tags.rs
