[package]
name = "polymarket-gamma-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.134"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
serde_html_form = "0.4.0"
